--- a/d/build.xml
+++ b/d/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="d" default="default" basedir=".">
-    <description>Builds, tests, and runs the project d.</description>
+<project name="Buffered_VS_Scanner" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Buffered_VS_Scanner.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="d-impl.jar">
+        <target name="run" depends="Buffered_VS_Scanner-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
